--- a/.github/โฟลโฟลว์/blank.yml
+++ b/.github/โฟลโฟลว์/blank.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: sam
 
 # Controls when the workflow will run
 on:
@@ -31,6 +31,6 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: |
+        run: open
           echo Add other actions to build,
           echo test, and deploy your project.
